[gd_scene load_steps=7 format=3 uid="uid://dsllcvm7vi10m"]

[ext_resource type="Script" path="res://addons/dialogue_nodes/nodes/setNode.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://ddkq7xxsfq7ix" path="res://addons/dialogue_nodes/icons/var.svg" id="2_1s8ig"]
[ext_resource type="Texture2D" uid="uid://dmqyuf4427yvx" path="res://addons/dialogue_nodes/icons/String.svg" id="2_dsm4i"]
[ext_resource type="Texture2D" uid="uid://kp1pbk80apuh" path="res://addons/dialogue_nodes/icons/int.svg" id="3_baw86"]
[ext_resource type="Texture2D" uid="uid://dlx1ii3oc506a" path="res://addons/dialogue_nodes/icons/float.svg" id="4_hrvbu"]
[ext_resource type="Texture2D" uid="uid://bvx0t8yu4vne8" path="res://addons/dialogue_nodes/icons/bool.svg" id="5_r1iaf"]

[node name="SetNode" type="GraphNode"]
offset_right = 362.0
offset_bottom = 86.0
title = "SetNode"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VarLogo" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_1s8ig")
expand_mode = 2
stretch_mode = 3

[node name="Variable" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The property to set the value of."
placeholder_text = "Variable"

[node name="Operator" type="OptionButton" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "The type of the value to set."
alignment = 1
item_count = 2
selected = 0
popup/item_0/text = "="
popup/item_0/id = 0
popup/item_1/text = "+="
popup/item_1/id = 1

[node name="Type" type="OptionButton" parent="HBoxContainer"]
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = ""
popup/item_0/icon = ExtResource("2_dsm4i")
popup/item_0/id = 4
popup/item_1/text = ""
popup/item_1/icon = ExtResource("3_baw86")
popup/item_1/id = 2
popup/item_2/text = ""
popup/item_2/icon = ExtResource("4_hrvbu")
popup/item_2/id = 3
popup/item_3/text = ""
popup/item_3/icon = ExtResource("5_r1iaf")
popup/item_3/id = 1

[node name="StringValue" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Value"
alignment = 1

[node name="IntValue" type="SpinBox" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
allow_greater = true
allow_lesser = true

[node name="FloatValue" type="SpinBox" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
step = 0.01
allow_greater = true
allow_lesser = true

[node name="BoolValue" type="CheckBox" parent="HBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 12
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[connection signal="text_changed" from="HBoxContainer/Variable" to="." method="set_variable"]
[connection signal="item_selected" from="HBoxContainer/Operator" to="." method="set_operator"]
[connection signal="item_selected" from="HBoxContainer/Type" to="." method="_on_type_changed"]
